--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -1,56 +1,38 @@
 $def with (content)
 
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>$content.title</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/style.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-responsive.min.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>$content.title</title>
+  <meta name="description" content="Sivusto kurssimateriaalien jakamista varten.">
+  <meta name="keywords" content="kurssimateriaalit,muistiinpanot,tiivistelmät">
+  <meta name="author" content="Aleksi Pekkala">
+  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-responsive.min.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/jqcloud.css">
+  <script src="/static/js/jquery.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
+  <script src="/static/js/jquery.tablesorter.min.js"></script>
+  <script src="/static/js/jqcloud-1.0.2.min.js"></script>
 </head>
 <body>
-     <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          $if content.title.endswith("Index"):
-            <a class="brand active" href="/">Kurssimateriaalit 0.1</a>
-          $else:
-            <a class="brand" href="/">Kurssimateriaalit 0.1</a>
-          <ul class="nav">
-            $if content.title.endswith("Kurssit"):
-                <li class="active"><a href="/courses">Kurssit</a></li>
-                <li><a href="/materials">Materiaalit</a></li>
-            $elif content.title.endswith("Materiaalit"):
-                <li><a href="/courses">Kurssit</a></li>
-                <li class="active"><a href="/materials">Materiaalit</a></li>
-            $else:
-                <li><a href="/courses">Kurssit</a></li>
-                <li><a href="/materials">Materiaalit</a></li>
-          </ul>
+  <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        $if content.title.endswith("Index"):
+          <a class="brand active" href="/">Kurssimateriaalit 0.1</a>
+        $else:
+          <a class="brand" href="/">Kurssimateriaalit 0.1</a>
+        <a href="/logout" class="btn btn-danger pull-right">Kirjaudu ulos</a>
+        <p class="navbar-text pull-right">Kirjautunut käyttäjänä <a href="" class="user-link" data-id="$session.id"><b>$session.user</b></a></p>        
+      </div> <!--/.container-->
+    </div> <!--/.navbar-inner-->
+  </div> <!--/.navbar-->
 
-          $if session.login:
-              <form class="navbar-form pull-right" action="/logout" method="POST">
-                <button id="logout-button" type="submit" class="btn btn-danger">Kirjaudu ulos</button>
-              </form>
-              <p class="navbar-text pull-right">Kirjautunut käyttäjänä <a href="#profile"><b>$session.username</b></a></p>
-              
-          $elif content.show_login_form == "True":
-              <form class="navbar-form pull-right" action="/login" method="POST">
-                <input class="span2" type="text" name="username" placeholder="Käyttäjänimi">
-                <input class="span2" type="password" name="password" placeholder="Salasana">
-                <button type="submit" class="btn btn-primary">Log in</button>
-              </form>
-              <p class="navbar-text pull-right"><a href="/register">Rekisteröidy</a></p>
-                
-            
-        </div>
-      </div>
-    </div>
+  $:content
 
-    $:content
-    
-    <script src="static/js/jquery.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>    
 </body>
 </html>
