--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,66 +1,213 @@
-$def with (new_materials, top_materials)
 $var title: Kurssimateriaalit 0.1 - Index
 $var show_login_form: True
 
-<div id="index-container" class="container">
+<div class="container">
+  <!-- HEADER -->
+  <div class="hero-unit">
+    <div class="title">
+      <h1>Kurssimateriaalit</h1>
+      <p>Jaa muistiinpanot, tiivistelmät yms. helposti</p>
+    </div>
+    <div class="tagcloud hidden-phone">
+    </div>
+    <div class="clearfix"></div>
+  </div>
 
-    <!-- Main hero unit for a primary marketing message or call to action -->
-    <div class="hero-unit">
-      <h1>Kurssimateriaalit 0.1<small>prototyyppi</small></h1>
-      <p>Jaa muistiinpanosi, tiivistelmät, mindmapit, mitkälie. Anna mennä.</p>
+  <div class="row">        
+    <!-- TABLE OF MATERIALS -->
+    <div class="span5 materials">
+      <table class="tablesorter table-condensed">
+        <thead>
+          <tr>
+            <th>Kurssi</th>
+            <th>Otsikko</th>
+            <th><i class="icon-user"></i></th>
+            <th><i class="icon-time"></i></th>
+            <th><i class="icon-comment"></i></th>
+            <th><i class="icon-thumbs-up"></i></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr></tr>
+        </tbody>
+      </table>
+      <div class="spinner"></div>
     </div>
 
-    <div class="row">
-      
-      <!-- NEW MATERIALS -->
-      <div class="span6">
-        <!-- NAVBAR -->
-        <div class="navbar">
-          <div class="navbar-inner">
-            <div class="container">
-              <a class="brand" href="#">Uusimmat materiaalit</a>
-            </div>
-          </div>
-        </div>
-        <!-- ITEMS -->
-        <table class="table table-striped table-condensed itemtable">
-          <tbody>
-          $for m in new_materials:
-            <tr>
-              <td><small>$m.title</small></td>
-              <td><a href="/courses/$m.course_id">$m.code</a></td>
-              <td><span class="badge badge-success">$m.points</span></td>
-              <td><span class="label"><i class="icon-user"></i>$m.name</span></td>
-              <td><small>$m.date_added</small></td>
-            </tr>
-          </tbody>
-        </table>  
+    <!-- SELECTED MATERIAL -->     
+    <div class="span4 selected-material">
+      <div class="none-selected">
+        <h3 class="muted">Valitse materiaali</h3>
       </div>
+    </div>
 
-      <!-- TOP MATERIALS -->
-      <div class="span6">
-        <!-- NAVBAR -->
-        <div class="navbar">
-          <div class="navbar-inner">
-            <div class="container">
-              <a class="brand" href="#">Uusimmat materiaalit</a>
-            </div>
+    <!-- RIGHT SIDEBAR -->
+    <div class="span3" style="background-color:#F5F5F5;border-radius:8px;">
+      <ul class="nav nav-list">
+        <form class="form-search" style="margin-top:20px;">
+          <div class="input-append">
+            <input type="text" class="span2 search-query" placeholder="Etsi materiaaleja" autofocus>
+            <button type="submit" class="btn btn-primary"><i class="icon-search"></i></button>
           </div>
+        </form>
+        <li class="divider"></li>
+        <li class="nav-header">Pikavalinta</li>
+        <li data-key="NEW" class="active"><a href="">Uusimmat</a></li>
+        <li data-key="HOT"><a href="">Kommentoiduimmat</a></li>
+        <li data-key="TOP"><a href="">Parhaat</a></li>
+        <li class="divider"></li>
+        <li class="nav-header">Organisaatio</li>
+        <li data-key="HUM"><a href="">Humanistinen</a></li>
+        <li data-key="IT"><a href="">Informaatioteknologian</a></li>
+        <li data-key="JSBE"><a href="">Kauppakorkeakoulu</a></li>
+        <li data-key="EDU"><a href="">Kasvatustieteiden</a></li>
+        <li data-key="SPORT"><a href="">Liikuntatieteellinen</a></li>
+        <li data-key="SCIENCE"><a href="">Matemaattis-luonnontieteellinen</a></li>
+        <li data-key="YTK"><a href="">Yhteiskuntatieteellinen</a></li>
+        <li data-key="KIELI"><a href="">Kielikeskus</a></li>
+        <li data-key="MUU"><a href="">Muu</a></li>
+        <li class="divider"></li>
+        <div class="sidebar-addnew">
+          <a href="/add" class="btn btn-large btn-success">Lisää uusi <i class="icon-plus"></i></a>
         </div>
-        <!-- ITEMS -->
-        <table class="table table-striped table-condensed itemtable">
-          <tbody>
-          $for m in top_materials:
-            <tr>
-              <td><small>$m.title</small></td>
-              <td><a href="/courses/$m.course_id">$m.code</a></td>
-              <td><span class="badge badge-success">$m.points</span></td>
-              <td><span class="label"><i class="icon-user"></i>$m.name</span></td>
-              <td><small>$m.date_added</small></td>
-            </tr>
-          </tbody>
-        </table>  
-      </div>
+      </ul>
+    </div><!-- /.span3 -->
+  </div><!--/.row-->
+</div><!--/.container-->
 
-    </div> <!-- /row -->
-</div>
+<script>
+window.onload = function(){
+  $if not session.timezone:
+    var offset = new Date().getTimezoneOffset();
+    $$.post("/timezone", {offset: offset});
+
+  var selected = $$(".selected-material"),
+      table_spinner = $$(".spinner").eq(0);
+  
+  $$(".tablesorter").tablesorter();
+
+  // Load a list of materials:
+  function load_table(options) {
+    if ($$(".tablesorter tbody").children().length > 0) {
+      $$(".tablesorter").trigger("sorton", [[]]) // Clear sorting.
+    }
+    $$(table_spinner).show();
+    $$("tbody").load("/materials?" + $$.param(options),
+      function() {
+        $$(table_spinner).hide();
+        $$(".tablesorter").trigger("update");
+      }
+    ); 
+  };
+
+  // Load a single material and its comments:
+  function load_selected(id) {
+    $$(selected).append("<div class='spinner'></div>");
+    $$(selected).load("materials/" + id);
+  };
+
+  // Load initial materials on startup:
+  load_table({key: "NEW"});
+
+  // Load materials on search form submit:
+  $$(".form-search").submit(function() {
+    $$(".nav-list li.active").removeClass("active");
+    var query = $$(this).find("input").val();
+    load_table({query: query});
+    return false;
+  });
+
+  // Load materials when a sidebar link is clicked:
+  $$(".nav-list li[data-key]").click(function() {
+    $$(".nav-list li.active").removeClass("active");
+    $$(this).addClass("active");
+    var key = $$(this).attr("data-key");
+    load_table({key: key});
+    return false;
+  });
+
+  // Load materials when a username link is clicked:
+  $$(".user-link").live("click", function() {
+    $$(".nav-list li.active").removeClass("active");
+    var id = $$(this).attr("data-id");
+    load_table({user_id: id});
+    return false;
+  });
+
+  // Load materials when a course link is clicked
+  $$(".course-link").live("click", function() {
+    $$(".nav-list li.active").removeClass("active");
+    var id = $$(this).attr("data-id");
+    load_table({course_id: id});
+    return false;
+  });
+
+  // Load materials when a tag link is clicked
+  $$(".tag-link").live("click", function() {
+    $$(".nav-list li.active").removeClass("active");
+    var query = $$(this).text();
+    load_table({query: query});
+    return false;
+  });
+
+  // Load a material+comments when an appropriate table row is clicked:
+  $$(".tablesorter tr").live("click", function(){
+    $$(".tablesorter .selected").removeClass("selected");
+    $$(this).addClass("selected");
+    var id = $$(this).attr("data-id");
+    load_selected(id);
+    return false;
+  });
+    
+  // Add a comment:
+  $$(".btn-comment").live("click", function(){
+    var id = $$(this).attr("data-id"),
+        comment = $$(this).siblings().val(),
+        textarea = $$(this).siblings();
+
+    $$.post("/materials/" + id,
+      {comment: comment},
+      function(data) {
+        if (data == "") {
+          load_selected(id);
+        } else {
+          alert(data);
+          $$(textarea).select();
+        }
+      },
+      "text");
+    return false;
+  });
+
+  // "Like" a material:
+  $$(".btn-like").live("click", function(){
+    var btn = $$(this),
+        id = $$(this).attr("data-id");
+
+    $$.get("/like?id=" + id, function(response){
+      if (response == "") {
+        $$(btn).addClass("disabled");
+      } else {
+        load_selected(id);
+      }
+    }, "text");
+    return false;
+  });
+
+  // Load the most popular courses and draw them into a cloud:
+  $$.getJSON("/coursesJSON",
+      function(data) {
+          var courses = [];
+          for (var i = 0; i < data.length; i++) {
+              var item = {
+                  text: data[i].code,
+                  weight: data[i].materials,
+                  link: "#",
+                  html: {class: "course-link", "data-id": data[i].id}
+              }
+              courses.push(item);
+          }
+          $$(".tagcloud").jQCloud(courses);
+  });
+}
+</script>
