--- a/templates/reader/register.html
+++ b/templates/reader/register.html
@@ -1,47 +1,33 @@
-$def with (error, username)
 $var title: Kurssimateriaalit 0.1 - Rekisteröityminen
 $var show_login_form: False
+$# A login/register form.
 
 <div class="container">
   <div class="row">
     
     <!-- LOGIN FORM -->
     <div class="span4 offset1">
-      <form class="form form-signin" action="/login" method="POST">
+      <form class="form form-signin login-form">
         <legend><h2 class="form-signin-heading">Kirjaudu sisään</h2></legend>
-        $if error == "bad_login":
-          <div class="alert alert-error">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <strong>Virhe!</strong> Virheellinen käyttäjänimi tai salasana.
-          </div>
+        <div class="alert alert-error nonvisible">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <div class="error-msg"></div>
+        </div>
         <input type="text" name="username" class="input-block-level" placeholder="Käyttäjänimi" required>
         <input type="password" name="password" class="input-block-level" placeholder="Salasana" required>
         <button class="btn btn-large btn-primary" type="submit">Kirjaudu</button>
+        <div class="spinner nonvisible"></div>
       </form>
     </div>
 
     <!-- REGISTER FORM -->
     <div class="span5">
-      <form class="form form-signin" action="/register" method="POST">
+      <form class="form form-signin register-form" action="/register" method="POST">
         <legend><h2 class="form-signin-heading">Rekisteröidy</h2></legend>
-        $if error and error != "bad_login":
-          <div class="alert alert-error">
-          $if error == "empty_fields":
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <strong>Virhe!</strong> Lomake sisältää tyhjiä kenttiä.
-          $elif error == "username_taken":
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <strong>Virhe!</strong> Käyttäjänimi on varattu.
-          $elif error == "bad_reg_username":
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <strong>Virhe!</strong> Käyttäjänimi ei ole sallitussa muodossa.
-          $elif error == "bad_reg_password":
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <strong>Virhe!</strong> Salasana ei ole sallitussa muodossa.
-          $else:
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <strong>Virhe!</strong> Salasana ei vastaa varmistusta.
-          </div>
+        <div class="alert alert-error nonvisible">
+          <button type="button" class="close" data-dismiss="alert">&times;</button>
+          <div class="error-msg"></div>
+        </div>
         <!-- Username -->
         <input type="text" name="username" class="input-block-level" placeholder="Käyttäjänimi" required pattern="[a-zåäöA-ZÅÄÖ0-9]{4,20}">
         <span class="help-inline">- Sallitut merkit: ä-ö, Ä-Ö, 0-9<br>- Pituus 4-20 merkkiä</span>
@@ -54,36 +40,54 @@ $var show_login_form: False
         <div><br></div>
         <!-- Submit -->
         <button class="btn btn-large btn-primary" type="submit">Rekisteröidy</button>
+        <div class="spinner nonvisible"></div>
       </form>
-    </div>
-  </div> <!-- /row -->
-</div> <!-- /container -->
+    </div><!-- /.span5 -->
+  </div> <!-- /.row -->
+</div> <!-- /.container -->
 
 <script>
 window.onload = function(){
-  // Focusing on form:
-  $if error == "bad_login":
-    $$("input").eq(0).val("$username").select();
-  $elif error in ["bad_match", "bad_reg_password"]:
-    $$("input").eq(2).val("$username");
-    $$("input").eq(3).focus();
-  $else:
-    $if error in ["username_taken", "bad_reg_username", "empty_fields"]:
-      $$("input").eq(2).val("$username");
-    $else:
-      $$("input").eq(2).val("Käyttäjänimi");
-    $$("input").eq(2).select();
+  // POST login data on login form submit:
+  $$(".login-form").submit(function() {
+    var form = $$(this);
+    $$(this).children(".spinner").show();
+    $$(this).children(".alert").hide();
+    $$.post("/login",
+            $$(this).serialize(),
+            function(data) {
+              $$(form).children(".spinner").hide();
+              if (data) {
+                $$(form).find(".alert .error-msg").html(data);
+                $$(form).children(".alert").show();
+                $$(form).children("input:first").select();
+              } else {
+                window.location.replace("/");
+              }
+            },
+            "text");
+    return false;
+  });
 
-  // Password confirmation validation:
-  $$("#password2").keyup(function(){
-    if ($$(this).val() !== $$("#password1").val()){
-      console.log("adding class..");
-      $$(this).addClass("force-invalid");
-    }
-    else {
-      $$(this).removeClass("force-invalid");
-      console.log("removing class..");
-    }
+  // POST registration data on register form submit:
+  $$(".register-form").submit(function() {
+    var form = $$(this);
+    $$(this).children(".spinner").show();
+    $$(this).children(".alert").hide();
+    $$.post("/register",
+            $$(this).serialize(),
+            function(data) {
+              $$(form).children(".spinner").hide();
+              if (data) {
+                $$(form).find(".alert .error-msg").html(data);
+                $$(form).children(".alert").show();
+                $$(form).children("input:first").select();
+              } else {
+                window.location.replace("/confirm");
+              }
+            },
+            "text");
+    return false;
   });
 };
 </script>
